# Linuxcnc_Kinematics

./: .gitignore  CAD_CAM.md  Kin.md  Matrix.md  README.md
Embroider/: README.md
Notes/: XYZABC_TRSRN kinematics for LinuxCNC.html
OpenCAMlib/: CMakeLists.txt  main.cpp  main3.cpp
OpenCAMlib/Basic_study/: CMakeLists.txt  Study.md
OpenCAMlib/Basic_study/main/: CMakeLists.txt  main.cpp
OpenCAMlib/Basic_study/src/: point.cpp
OpenCAMlib/Notes/: CAM.md  Drop-Cutter.md  OpenVoronoi.md  Waterline.md
OpenCAMlib/examples/: CMakeLists.txt
OpenCAMlib/examples/point/: CMakeLists.txt
OpenCAMlib/examples/test/: CMakeLists.txt  test_example.cpp
OpenCAMlib/prebuilds/linux-cxx-x86_64/share/cmake/OpenCAMLib/: OpenCAMLibConfig.cmake  OpenCAMLibTargets-relwithdebinfo.cmake  OpenCAMLibTargets.cmake
Python_Binding/: CMakeLists.txt  main.sh
Python_Binding/src/: lib.cpp  lib.hpp  lib_py.cpp
Python_Binding/test/: main.cpp  main.py  main_py.cpp
Robotics_Library_RL/: Help.md  old_help.md
Robotics_Library_RL/Help_files/Test/: CMakeLists.txt  myMdlDemo.cpp
Robotics_Library_RL/Help_files/Test2/: CMakeLists.txt  myMdlDemo.cpp
Robotics_Library_RL/part/: Study.md  output.wrl  part.g
Test_Vtk/: CMakeLists.txt  build.sh  test_VTK.cpp
Test_Vtk/examples/: Help.md
Test_Vtk/examples/Helloo/: CMakeLists.txt  PointViewer.cxx  XGMLReader.cxx
Test_boost/: Build_help.md  build.sh  test_boost_version.cpp
